sdvdemo-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
  name: sdvdemo
  namespace: fd
spec:
  ingressClassName: nginx
  rules:
  - host: sdvdemo.cpclie.de
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: sdvdemo
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
  selector:
    app: sdvdemo
    tier: frontend
 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: sdvdemo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sdvdemo
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sdvdemo
        tier: frontend
    spec:
      containers:
      - image: markusfelsner/sdvdemo-k8s:1.8
        name: sdvdemo
        ports:
          - containerPort: 8888
